@@ -606,7 +606,7 @@ Le nombre d&apos;images diffère.</translation>
     <message>
         <location line="+39"/>
         <source>Set Looping</source>
-        <comment>Looping, operation complete</comment>
+        <comment>Change whether animation loops operation complete</comment>
         <translation type="unfinished"></translation>
     </message>
     <message>
