@@ -605,7 +605,7 @@ počet rámcov sa líši.</translation>
     <message>
         <location line="+39"/>
         <source>Set Looping</source>
-        <comment>Looping, operation complete</comment>
+        <comment>Change whether animation loops operation complete</comment>
         <translation type="unfinished"></translation>
     </message>
     <message>
