@@ -2451,7 +2451,7 @@ MU_SetAnimLoop::~MU_SetAnimLoop()
 
 void MU_SetAnimLoop::undo( Model * model )
 {
-   model->setAnimationLooping( m_mode, m_animNum, m_oldLoop );
+   model->setAnimLooping( m_mode, m_animNum, m_oldLoop );
    if ( model->getAnimationMode() != Model::ANIMMODE_NONE && (model->getAnimationMode() != m_mode || model->getCurrentAnimation() != m_animNum) ) 
    {
       model->setCurrentAnimation( m_mode, m_animNum );
@@ -2460,7 +2460,7 @@ void MU_SetAnimLoop::undo( Model * model )
 
 void MU_SetAnimLoop::redo( Model * model )
 {
-   model->setAnimationLooping( m_mode, m_animNum, m_newLoop );
+   model->setAnimLooping( m_mode, m_animNum, m_newLoop );
    if ( model->getAnimationMode() != Model::ANIMMODE_NONE && (model->getAnimationMode() != m_mode || model->getCurrentAnimation() != m_animNum) ) 
    {
       model->setCurrentAnimation( m_mode, m_animNum );
