@@ -1,4 +1,5 @@
 Changes for 1.3.10
+   Improve code integration of animation loop setting
    Fix building for Windows
    Add support for autotools out-of-tree build
    Add press F1 for help to OBJ export options window
